test/disabled/neg/t5452.check
t5452.scala:28: error: overloaded method value apply with alternatives:
  ()Queryable[CoffeesTable] <and>
  (t: Tree)(implicit evidence$2: Manifest[CoffeesTable])Nothing <and>
  (implicit evidence$1: Manifest[CoffeesTable])Nothing
 cannot be applied to (Queryable[CoffeesTable])
  Queryable[CoffeesTable](  q.treeFilter(null)  )
           ^
one error found
